- Implemented channel recording on the log records.
- The :class:`logbook.more.FingersCrossedHandler` now is set to
  `ERROR` by default and has the ability to create new loggers
  from a factory function.
- Implemented maximum buffer size for the
  :class:`logbook.more.FingersCrossedHandler` as well as a lock
  for thread safety.
- Added ability to filter for context.
- Moved bubbling flags and filters to the handler object.
- Moved context processors on their own stack.
- Removed the `iter_context_handlers` function.
- Renamed `NestedHandlerSetup` to :class:`~logbook.NestedSetup`
  because it can now also configure processors.
- Added the :class:`logbook.Processor` class.
- There is no difference between logger attached handlers and
  context specific handlers any more.
- Added a function to redirect warnings to logbook
  (:func:`logbook.compat.redirected_warnings`).
- Fixed and improved :class:`logbook.LoggerGroup`.
- The :class:`logbook.TestHandler` now keeps the record open
  for further inspection.
- The traceback is now removed from a log record when the record
  is closed.  The formatted traceback is a cached property
  instead of a function.
- Added ticketing handlers that send logs directly into a database.
- Added MongoDB backend for ticketing handlers
- Added a :func:`logbook.base.dispatch_record` function to dispatch
  records to handlers independently of a logger (uses the default
  record dispatching logic).
- Renamed `logger_name` to `channel`.
- Added a multi processing log handler
  (:class:`logbook.more.MultiProcessingHandler`).
- Added a twitter handler.
- Added a ZeroMQ handler.
- Added a Growl handler.
- Added a Libnotify handler.
- Added a monitoring file handler.
- Added a handler wrapper that moves the actual handling into a
  background thread.
- The mail handler can now be configured to deliver each log record
  not more than n times in m seconds.
- Added support for Python 2.5

Version 0.1
-----------

First public release.